--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API para disponibilização de dados regionais da COVID-19",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,8 @@
     "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csv": "^6.0.5",
+    "csv-parse": "^5.0.4",
     "dotenv": "^14.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
