--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
+IS_HTTPS=0
+HOST="127.0.0.1"
 PORT=8888
-TOKEN_KEY='<TOKEN_HERE>'
+TOKEN_KEY='<TOKEN_HERE/>'
 MONGO_HOST="mongodb://localhost"
 MONGO_DBNAME="api_covid"
